--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,7 +5,12 @@ permalink: /teaching/
 author_profile: true
 ---
 
-To be updated
+* Hardware-Software Co-Design (ELEN 503)
+  * Santa Clara University
+  * Spring 2022
+* Computer Architecture (ELEN 122)
+  * Santa Clara University
+  * Winter 2022
 
 <!--
 {% include base_path %}
