--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,12 +5,21 @@ permalink: /teaching/
 author_profile: true
 ---
 
-* Hardware-Software Co-Design (ELEN 503)
-  * Santa Clara University
-  * Spring 2022
-* Computer Architecture (ELEN 122)
-  * Santa Clara University
-  * Winter 2022
+<ul>
+  <li>Hardware-Software Co-Design (ELEN 503)
+   <ul>
+    <li>Santa Clara University</li>
+    <li>Spring 2022</li>
+   </ul>
+ </li>
+  <li>Computer Architecture (ELEN 122)
+    <ul>
+    <li>Santa Clara University</li>
+    <li>Winter 2022</li>
+   </ul>  
+ </li>
+</ul>
+
 
 <!--
 {% include base_path %}
