--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,12 +12,42 @@ author_profile: true
     <li>Spring 2022</li>
    </ul>
  </li>
+   <li>Introduction to Logic Design (ELEN 21)
+   <ul>
+    <li>Santa Clara University</li>
+    <li>Spring 2022</li>
+   </ul>
+ </li>
   <li>Computer Architecture (ELEN 122)
     <ul>
     <li>Santa Clara University</li>
     <li>Winter 2022</li>
    </ul>  
  </li>
+  <li>Logic Design
+    <ul>
+    <li>Ajou University</li>
+    <li>2016-2021</li>
+   </ul>  
+ </li>  
+    <li>Digital System Design
+    <ul>
+    <li>Ajou University</li>
+    <li>2014-2021</li>
+   </ul>  
+ </li>  
+    <li>Operating Systems for Electrical Engineering
+    <ul>
+    <li>Ajou University</li>
+    <li>2014-2021</li>
+   </ul>  
+ </li>  
+    <li>Parallel and Distributed Systems
+    <ul>
+    <li>Ajou University</li>
+    <li>2014-2021</li>
+   </ul>  
+ </li>  
 </ul>
 
 
