--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,12 +6,6 @@ author_profile: true
 ---
 
 <ul>
-  <li>Hardware-Software Co-Design (ELEN 503)
-   <ul>
-    <li>Santa Clara University</li>
-    <li>Spring 2022</li>
-   </ul>
- </li>
    <li>Introduction to Logic Design (ELEN 21)
    <ul>
     <li>Santa Clara University</li>
@@ -21,10 +15,29 @@ author_profile: true
   <li>Computer Architecture (ELEN 122)
     <ul>
     <li>Santa Clara University</li>
-    <li>Winter 2022</li>
+    <li>Winter 2022-2023</li>
    </ul>  
  </li>
-  <li>Logic Design
+  <li>Advanced Computer Architecture I (ELEN 511)
+   <ul>
+    <li>Santa Clara University</li>
+    <li>Fall 2022</li>
+   </ul>
+ </li>
+ 
+  <li>Advanced Computer Architecture II (ELEN 512)
+   <ul>
+    <li>Santa Clara University</li>
+    <li>Winter 2023</li>
+   </ul>
+ </li>
+  <li>Hardware-Software Co-Design (ELEN 503)
+   <ul>
+    <li>Santa Clara University</li>
+    <li>Spring 2022</li>
+   </ul>
+ </li>
+ <li>Logic Design
     <ul>
     <li>Ajou University</li>
     <li>2016-2021</li>
