--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,10 +6,10 @@ author_profile: true
 ---
 
 <ul>
-   <li>Introduction to Logic Design (ELEN 21)
+   <li>Introduction to Logic Design (ECEN 21)
    <ul>
     <li>Santa Clara University</li>
-    <li>Spring 2022</li>
+    <li>Spring 2022, Fall 2023</li>
    </ul>
  </li>
   <li>Computer Architecture (ELEN 122)
@@ -18,10 +18,10 @@ author_profile: true
     <li>Winter 2022-2023</li>
    </ul>  
  </li>
-  <li>Advanced Computer Architecture I (ELEN 511)
+  <li>Advanced Computer Architecture (ELEN 511)
    <ul>
     <li>Santa Clara University</li>
-    <li>Fall 2022</li>
+    <li>Fall 2022-2024</li>
    </ul>
  </li>
  
@@ -34,7 +34,7 @@ author_profile: true
   <li>Hardware-Software Co-Design (ELEN 503)
    <ul>
     <li>Santa Clara University</li>
-    <li>Spring 2022</li>
+    <li>Spring 2022-2023</li>
    </ul>
  </li>
  <li>Logic Design
