--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,26 +12,26 @@ author_profile: true
     <li>Spring 2022, Fall 2023</li>
    </ul>
  </li>
-  <li>Computer Architecture (ELEN 122)
+  <li>Computer Architecture (ECEN 122)
     <ul>
     <li>Santa Clara University</li>
     <li>Winter 2022-2023</li>
    </ul>  
  </li>
-  <li>Advanced Computer Architecture (ELEN 511)
+  <li>Advanced Computer Architecture (ECEN 511)
    <ul>
     <li>Santa Clara University</li>
     <li>Fall 2022-2024</li>
    </ul>
  </li>
  
-  <li>Advanced Computer Architecture II (ELEN 512)
+  <li>Advanced Computer Architecture II (ECEN 512)
    <ul>
     <li>Santa Clara University</li>
     <li>Winter 2023</li>
    </ul>
  </li>
-  <li>Hardware-Software Co-Design (ELEN 503)
+  <li>Hardware-Software Co-Design (ECEN 503)
    <ul>
     <li>Santa Clara University</li>
     <li>Spring 2022-2023</li>
