--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -28,7 +28,7 @@ author_profile: true
   <li>Advanced Computer Architecture II (ECEN 512)
    <ul>
     <li>Santa Clara University</li>
-    <li>Winter 2023</li>
+    <li>Winter 2023-2024</li>
    </ul>
  </li>
   <li>Hardware-Software Co-Design (ECEN 503)
