--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -15,26 +15,26 @@ author_profile: true
   <li>Computer Architecture (ECEN 122)
     <ul>
     <li>Santa Clara University</li>
-    <li>Winter 2022-2023</li>
+    <li>Winter 2022-present</li>
    </ul>  
  </li>
   <li>Advanced Computer Architecture (ECEN 511)
    <ul>
     <li>Santa Clara University</li>
-    <li>Fall 2022-2024</li>
+    <li>Fall 2022-present</li>
    </ul>
  </li>
  
   <li>Advanced Computer Architecture II (ECEN 512)
    <ul>
     <li>Santa Clara University</li>
-    <li>Winter 2023-2024</li>
+    <li>Winter 2023-present</li>
    </ul>
  </li>
   <li>Hardware-Software Co-Design (ECEN 503)
    <ul>
     <li>Santa Clara University</li>
-    <li>Spring 2022-2023</li>
+    <li>Spring 2022-present</li>
    </ul>
  </li>
  <li>Logic Design
